--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <title>My Resume</title>
     <h1>Igal Gootin</h1>
     <h2>Head of Digital</h2>
-    <h3>Personal information and contact details:</h3>
+    <h3>Personal information</h3>
     <ul>
         <li>Birthdate: March 30th, 1987. age 37</li>
         <li>Married + 3</li>
-        <li>tel: 972545467054</li>
-        <li>email:<a href="mailto:igalgootin@gmail.com">igalgootin@gmail.com</a></li>
-        <li><a href="https://www.linkedin.com/in/igalgootin/">linkedin page</a></li>
+        <li><a href="./contact.html">Contant info</a></li>
     </ul>
 
-    <img src="./headshot.jpg" height="200" alt="profile picture of Igal Gootin"/>
+    <img src="./assets/images/headshot.jpg" height="200" alt="profile picture of Igal Gootin"/>
     <h2>Summary</h2>
     <p>I am a creative digital marketing and business development professional
     with extensive experience leading digital initiatives, including Bar-Ilan University's
@@ -81,6 +79,8 @@
             <li>Advanced Strategy and Client Management, "Habetzefer", 2014</li>
             <li>Management Development Course, 2016</li>
         </ul>
+        <br />
+        <li><a href="./hobbies.html">Hobbies</a></li>
         </li>
     </ul>
     
